manual-deploy/smackweb.yaml
apiVersion: v1
kind: Service
metadata:
  name: smackweb
  labels:
    app: smackweb
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: smackweb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smackweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smackweb
  template:
    metadata:
      labels:
        app: smackweb
    spec:
      containers:
      - name: smackweb
        image: pierluigi.azurecr.io/smackweb:master-927485e8
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: acrsecret
