manual-deploy/destrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: smackapi-destinationrule
spec:
  host: smackapi
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
