manual-deploy/route-v1.yaml
apiVersion: config.istio.io/v1alpha2
kind: Rule
metadata:
  name: prod
spec:
  destination:
    name: smackapi
  route:
  - labels:
      version: new
    weight: 0
  - labels:
      version: prod
    weight: 100


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: aspnetcore-destinationrule
spec:
  host: aspnetcore-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
