manual-deploy/smackapi-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smackapi-vs
spec:
  hosts:
  - smackapi.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: smackapi
        subset: blue
      weight: 50 
    - destination:
        host: smackapi
        subset: green
      weight: 50
