manual-deploy/smackweb-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smackweb-vs
spec:
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: smackweb
